--- a/client/src/app/components/directives/pagination/pagination.component.html
+++ b/client/src/app/components/directives/pagination/pagination.component.html
@@ -1,7 +1,7 @@
 <div class="flex-continer pagination-container" fxLayout="row" fxLayoutAlign="end center">
 	<div class="flex-item" fxFlex></div>
 	<div *ngIf="showPageSelector" 
-		class="flex-item" 
+		class="pagination-label flex-item" 
 		fxFlex="31px" 
 		fxHide 
 		fxShow.gt-sm
@@ -18,7 +18,7 @@
 		[fxShow.gt-xs]="!isSideinfoOpen() || !isNavDrawerOpen()">
 		<md-option *ngFor="let i of availablePagesSelection" [value]="i">{{i}}</md-option>
 	</md-select>
-	<div class="flex-item" fxFlex="83px" style="margin-left:32px;">
+	<div class="pagination-label flex-item" fxFlex="83px" style="margin-left:32px;">
 		Rows per page:
 	</div>
 	<md-select [(ngModel)]="paginfo.displayedRows" 
@@ -27,13 +27,13 @@
 		fxFlex="64px">
 		<md-option *ngFor="let i of displayedRowsSelection" [value]="i">{{i}}</md-option>
 	</md-select>
-	<div class="flex-item" style="margin:0 32px;" fxFlex="80px">
+	<div class="pagination-label flex-item" style="margin:0 32px;" fxFlex="80px">
 		{{displayedRange.min}}-{{displayedRange.max}} of {{paginfo.totalRows}}
 	</div>
 	<button md-icon-button 
-		*ngIf="showFirstLastPage" 
-		(click)="firstPage()" 
-		class="pagination-nav-button flex-item" 
+		*ngIf="showFirstLastPage"
+		(click)="firstPage()"
+		class="pagination-nav-button flex-item"
 		fxFlex="24px"
 		fxHide
 		fxShow.gt-sm
