--- a/client/src/app/components/directives/pagination/pagination.component.scss
+++ b/client/src/app/components/directives/pagination/pagination.component.scss
@@ -1,4 +1,5 @@
 .pagination-container {
+	user-select: none;
 	font-size: 12px;
     color: rgba(0,0,0,0.54);
 	font-weight: 500;
@@ -16,4 +17,8 @@
 .pagination-nav-button-icon {
 	position: relative;
 	top: -9px; // Different for all browsers...
+}
+
+.pagination-label {
+	cursor: default;
 }
