changed some strings

--- a/client/src/app/components/exceedance/ime-number-list-sideinfo/ime-number-list-sideinfo.component.html
+++ b/client/src/app/components/exceedance/ime-number-list-sideinfo/ime-number-list-sideinfo.component.html
@@ -16,7 +16,7 @@
 		</div>
 		<div class="sideinfo-section">
 			<div class="sideinfo-section-header">
-				Grids
+				Grid(s)
 			</div>
 			<div *ngFor="let grid of imeNumber.monitoringPoints" class="sideinfo-section-data-list-item truncate" style="width:256px;">
 				{{grid.name}}
