--- a/client/src/app/components/exceedance/ime-number/ime-number.component.html
+++ b/client/src/app/components/exceedance/ime-number/ime-number.component.html
@@ -16,7 +16,7 @@
 						<strong>Site:</strong> Coming Soon
 					</div>
 					<div class="flex-item" fxFlex>
-						<strong>Grids:</strong> Coming Soon
+						<strong>Grid(s):</strong> Coming Soon
 					</div>
 				</div>
 				<div *ngIf="!imeNumberData">
