--- a/client/src/app/components/exceedance/ime-number-list/ime-number-list.component.html
+++ b/client/src/app/components/exceedance/ime-number-list/ime-number-list.component.html
@@ -60,7 +60,7 @@
 			<div class="data-table-column truncate flex-item" (click)="sortBy('monitoringPoint')" fxFlex>
 				<span class="data-table-header-label-sortable" [ngClass]="{
 					'data-table-header-label-sorted':sort.current == 'monitoringPoint'}">
-					Grids
+					Grid(s)
 				</span>
 				<md-icon class="data-table-header-sort-arrow" [ngClass]="{
 					'data-table-header-sort-arrow-reverse': sort.reversed,
