--- a/client/src/app/components/navigation/navigation-toolbar/navigation-toolbar.component.html
+++ b/client/src/app/components/navigation/navigation-toolbar/navigation-toolbar.component.html
@@ -44,7 +44,7 @@
 		</button>
 	</md-menu>
 </md-toolbar>
-<div class="fab-top-container" *ngIf="fabInfo">
+<div class="fab-container" *ngIf="fabInfo">
 	<button md-fab (click)="fabAction($event)" [mdTooltip]="fabInfo.tooltip" mdTooltipPosition="below">
 		<md-icon>{{fabInfo.icon}}</md-icon>
 	</button>
