--- a/client/src/app/components/unverified-data/unverified-data-set-list/unverified-data-set-list.component.html
+++ b/client/src/app/components/unverified-data/unverified-data-set-list/unverified-data-set-list.component.html
@@ -18,7 +18,7 @@
 				</md-select>
 			</div>
 			<button md-icon-button 
-				(click)="toggleFilters()" 
+				(click)="toggleFilters()"
 				class="toggle-icon-button flex-item"
 				[ngClass]="{'toggle-icon-button-active': showFilters}"
 				fxFlex="40px"
@@ -26,17 +26,17 @@
 				mdTooltipPosition="below">
 				<md-icon>filter_list</md-icon>
 			</button>
-			<button md-icon-button 
+			<button md-icon-button
 				(click)="toggleSideInfo()" 
-				class="flex-item" 
-				fxFlex="40px" 
-				[mdTooltip]="showSideInfo ? 'Hide Details' : 'Show Details'" 
+				class="flex-item"
+				fxFlex="40px"
+				[mdTooltip]="showSideInfo ? 'Hide Details' : 'Show Details'"
 				mdTooltipPosition="below">
 				<md-icon>{{showSideInfo ? 'chevron_right' : 'chevron_left'}}</md-icon>
 			</button>
 		</div>
 		<div class="unselectable data-table-header-row flex-container" fxLayout="row">
-			<div class="data-table-first-column truncate flex-item" (click)="sortBy('site')" fxFlex="6">
+			<div class="data-table-first-column truncate flex-item" (click)="sortBy('site')" fxFlex="11">
 				<span class="data-table-header-label-sortable" [ngClass]="{
 					'data-table-header-label-sorted':sort.current == 'site'}">
 					Site
@@ -47,26 +47,22 @@
 					arrow_downward
 				</md-icon>
 			</div>
-			<div class="data-table-column truncate flex-item" (click)="sortBy('createdBy')"
-				fxFlex="9"
-				fxHide 
-				fxShow.gt-md
-				[fxShow.gt-sm]="!showSideInfo || !isNavDrawerOpen()" >
+			<div class="data-table-column truncate flex-item" (click)="sortBy('inspector')" fxFlex="14">
 				<span class="data-table-header-label-sortable" [ngClass]="{
-					'data-table-header-label-sorted':sort.current == 'createdBy'}">
-					Uploaded By
+					'data-table-header-label-sorted':sort.current == 'inspector'}">
+					Inspector
 				</span>
 				<md-icon class="data-table-header-sort-arrow" [ngClass]="{
 					'data-table-header-sort-arrow-reverse': sort.reversed,
-					'data-table-header-sort-arrow-inactive': sort.current !== 'createdBy'}">
+					'data-table-header-sort-arrow-inactive': sort.current !== 'inspector'}">
 					arrow_downward
 				</md-icon>
 			</div>
 			<div class="data-table-column truncate flex-item" (click)="sortBy('createdDate')" 
-				fxFlex="7"
+				fxFlex="13"
 				fxHide 
-				fxShow.gt-md
-				[fxShow.gt-sm]="!showSideInfo || !isNavDrawerOpen()" >
+				fxShow.gt-sm
+				[fxShow.gt-xs]="!showSideInfo || !isNavDrawerOpen()" >
 				<span class="data-table-header-label-sortable" [ngClass]="{
 					'data-table-header-label-sorted':sort.current == 'createdDate'}">
 					Upload Date
@@ -74,40 +70,6 @@
 				<md-icon class="data-table-header-sort-arrow" [ngClass]="{
 					'data-table-header-sort-arrow-reverse': sort.reversed,
 					'data-table-header-sort-arrow-inactive': sort.current !== 'createdDate'}">
-					arrow_downward
-				</md-icon>
-			</div>
-			<div class="data-table-column truncate flex-item" 
-				(click)="sortBy('modifiedBy')" 
-				fxFlex="9"
-				fxHide 
-				fxShow.gt-lg 
-				[fxShow.gt-md]="!showSideInfo || !isNavDrawerOpen()" 
-				[fxShow.gt-sm]="!showSideInfo && !isNavDrawerOpen()">
-				<span class="data-table-header-label-sortable" [ngClass]="{
-					'data-table-header-label-sorted':sort.current == 'modifiedBy'}">
-					Modified By
-				</span>
-				<md-icon class="data-table-header-sort-arrow" [ngClass]="{
-					'data-table-header-sort-arrow-reverse': sort.reversed,
-					'data-table-header-sort-arrow-inactive': sort.current !== 'modifiedBy'}">
-					arrow_downward
-				</md-icon>
-			</div>
-			<div class="data-table-column truncate flex-item" 
-				(click)="sortBy('modifiedDate')" 
-				fxFlex="7"
-				fxHide 
-				fxShow.gt-lg 
-				[fxShow.gt-md]="!showSideInfo || !isNavDrawerOpen()" 
-				[fxShow.gt-sm]="!showSideInfo && !isNavDrawerOpen()">
-				<span class="data-table-header-label-sortable" [ngClass]="{
-					'data-table-header-label-sorted':sort.current == 'modifiedDate'}">
-					Modified Date
-				</span>
-				<md-icon class="data-table-header-sort-arrow" [ngClass]="{
-					'data-table-header-sort-arrow-reverse': sort.reversed,
-					'data-table-header-sort-arrow-inactive': sort.current !== 'modifiedDate'}">
 					arrow_downward
 				</md-icon>
 			</div>
@@ -125,38 +87,18 @@
 					(click)="selectUnverifiedDataSet(dataSet)"
 					(dblclick)="navigateToUnverifiedDataSet(dataSet)"
 					[ngClass]="{'data-table-row-content-active': dataSet === selectedUnverifiedDataSet}">
-					<div class="data-table-first-column truncate flex-item" fxFlex="6">
+					<div class="data-table-first-column truncate flex-item" fxFlex="11">
 						{{dataSet.site.name}}
 					</div>
-					<div class="data-table-column truncate flex-item" 
-						fxFlex="9"
-						fxHide 
-						fxShow.gt-md
-						[fxShow.gt-sm]="!showSideInfo || !isNavDrawerOpen()" >
-						{{dataSet.createdBy ? StringUtils.formatUserName(dataSet.createdBy) : ''}}
+					<div class="data-table-column truncate flex-item" fxFlex="14">
+						{{dataSet.createdBy ? StringUtils.formatUserName(dataSet.inspector) : ''}}
 					</div>
 					<div class="data-table-column truncate flex-item" 
-						fxFlex="7"
+						fxFlex="13"
 						fxHide 
-						fxShow.gt-md
-						[fxShow.gt-sm]="!showSideInfo || !isNavDrawerOpen()" >
+						fxShow.gt-sm
+						[fxShow.gt-xs]="!showSideInfo || !isNavDrawerOpen()" >
 						{{dataSet.createdDate ? DateTimeUtils.getDate(dataSet.createdDate) : ''}}
-					</div>
-					<div class="data-table-column truncate flex-item" 
-						fxFlex="9"
-						fxHide 
-						fxShow.gt-lg 
-						[fxShow.gt-md]="!showSideInfo || !isNavDrawerOpen()" 
-						[fxShow.gt-sm]="!showSideInfo && !isNavDrawerOpen()">
-						{{dataSet.modifiedBy ? StringUtils.formatUserName(dataSet.modifiedBy) : ''}}
-					</div>
-					<div class="data-table-column truncate flex-item"
-						fxFlex="7"
-						fxHide 
-						fxShow.gt-lg 
-						[fxShow.gt-md]="!showSideInfo || !isNavDrawerOpen()" 
-						[fxShow.gt-sm]="!showSideInfo && !isNavDrawerOpen()">
-						{{dataSet.modifiedDate ? DateTimeUtils.getDate(dataSet.modifiedDate) : ''}}
 					</div>
 					<div class="data-table-column truncate flex-item" fxFlex>
 						{{dataSet.filename}}
