--- a/client/src/app/components/unverified-data/unverified-data-set/unverified-data-set.component.scss
+++ b/client/src/app/components/unverified-data/unverified-data-set/unverified-data-set.component.scss
@@ -1,3 +1,6 @@
+$info-card-width: 480px;
+$info-card-height: 160px;
+
 .error-item {
 	padding: 8px 16px;
 	color: #F00;
@@ -12,25 +15,6 @@
 	position: relative;
 	top: 8px;
 	height: calc(100% - 8px);
-}
-
-.sideinfo {
-	overflow: hidden;
-}
-
-.sideinfo-top-padding {
-	background: #FFF;
-	padding-top: 48px;
-	border-bottom: 1px solid rgba(0,0,0,0.12);
-}
-
-.sideinfo-background {
-	height: calc(100% - 48px);
-	overflow-y: auto;
-	padding: 0 0 0 2px;
-	md-card {
-		height: calc(100% - 48px);
-	}
 }
 
 .tab-contents {
@@ -62,4 +46,47 @@
 			margin-bottom: 24px;
 		}
 	}
+}
+
+.info-card-container {
+	width: 52px;
+	z-index: 9001;
+	right: 17px;
+	top: 120px;
+	padding: 16px 0 16px 16px;
+	position: fixed;
+	overflow: hidden;
+	transition: width 0.2s ease-in-out;
+	button {
+		padding: 0;
+	}
+}
+
+.info-card {
+	padding: 24px;
+	z-index: 2;
+	width: $info-card-width;
+	height: $info-card-height;
+	background: #FFF;
+	transition: box-shadow 0.2s ease-in-out;
+}
+
+.info-card-container-open {
+	width: calc(#{$info-card-width} + 52px);
+}
+
+.info-card-data-row {
+	height: 28px;
+}
+
+.info-card-data-key {
+	font-size: 13px;
+	font-weight: 500;
+	color: rgba(0,0,0,0.87);
+}
+
+.info-card-data-value {
+	font-size: 13px;
+	font-weight: 400;
+	color: rgba(0,0,0,0.87);
 }
