--- a/client/src/app/components/navigation/navigation-toolbar/navigation-toolbar.component.html
+++ b/client/src/app/components/navigation/navigation-toolbar/navigation-toolbar.component.html
@@ -1,4 +1,5 @@
 <md-toolbar class="navbar" [ngClass]="{'navbar-expanded': expanded}">
+	<div class="navbar-shadow"></div>
 	<div class="navbar-content flex-container" fxLayout="row" fxLayoutAlign="space-between center">
 		<div class="navbar-hamburger flex-item" fxFlex="40px">
 			<button md-icon-button (click)="toggleNavDrawer()">
