--- a/client/src/app/components/exceedance/ime-number/ime-number.component.html
+++ b/client/src/app/components/exceedance/ime-number/ime-number.component.html
@@ -1,22 +1,43 @@
-<div class="grey-background" style="height: 100%; padding: 24px">
-	<div *ngIf="!isDataLoaded">
-		<app-page-loading-indicator></app-page-loading-indicator>
-	</div>
+<div class="page grey-background">
+	<app-page-loading-indicator *ngIf="!isDataLoaded || !isUsersLoaded" [message]="loadingMessage"></app-page-loading-indicator>
 	<div *ngIf="isDataLoaded && isUsersLoaded">
 		<md-card style="margin-bottom: 24px">
 			<md-card-content>
 				<div class="card-title">
-					Information
+					IME Number Details
 				</div>
-				<div *ngIf="imeNumberData" class="section-form-container flex-container" fxLayout="row">
-					<div class="flex-item" fxFlex>
-						<strong>IME Number:</strong> {{imeNumberData.imeNumber}}
+				<div *ngIf="imeNumberData">
+					<div class="info-card-data-row flex-container" fxLayout="row" fxLayoutAlign="start center">
+						<div class="info-card-data-key flex-item" fxFlex="96px">
+							IME Number
+						</div>
+						<div class="info-card-data-value truncate flex-item" fxFlex>
+							{{imeNumber}}
+						</div>
 					</div>
-					<div class="flex-item" fxFlex>
-						<strong>Site:</strong> Coming Soon
+					<div class="info-card-data-row flex-container" fxLayout="row" fxLayoutAlign="start center">
+						<div class="info-card-data-key flex-item" fxFlex="96px">
+							Status
+						</div>
+						<div class="info-card-data-value truncate flex-item" fxFlex>
+							{{imeNumberData.status.name}}
+						</div>
 					</div>
-					<div class="flex-item" fxFlex>
-						<strong>Grid(s):</strong> Coming Soon
+					<div class="info-card-data-row flex-container" fxLayout="row" fxLayoutAlign="start center">
+						<div class="info-card-data-key flex-item" fxFlex="96px">
+							Site
+						</div>
+						<div class="info-card-data-value truncate flex-item" fxFlex>
+							{{imeNumberData.site.name}}
+						</div>
+					</div>
+					<div class="info-card-data-row flex-container" fxLayout="row" fxLayoutAlign="start center">
+						<div class="info-card-data-key flex-item" fxFlex="96px">
+							Grid(s)
+						</div>
+						<div class="info-card-data-value truncate flex-item" fxFlex>
+							<a>{{listGrids(imeNumberData)}}</a>
+						</div>
 					</div>
 				</div>
 				<div *ngIf="!imeNumberData">
@@ -24,67 +45,122 @@
 				</div>
 			</md-card-content>
 		</md-card>
-		<md-card style="margin-bottom: 24px">
-			<md-card-content>
-				<div class="card-title">
-					IME Log
+		<div *ngFor="let imeData of imeNumberData.imeData; let dataIdx = index; let lastData = last">
+			<div class="section-subheader">
+				{{dataIdx == 0 ? 'Initial Reading' : 'Recheck ' + dataIdx}}
+			</div>
+			<div class="flex-container" fxLayout="row">
+				<div class="flex-item" fxFlex="50" style="padding-right: 12px;">
+					<div class="info-card-action-button-container">
+						<button md-icon-button [mdMenuTriggerFor]="dataMenu">
+							<md-icon>more_vert</md-icon>
+						</button>
+						<md-menu #dataMenu="mdMenu">
+							<button md-menu-item (click)="openRecheckDialog(dataIdx)" [disabled]="dataIdx == 0">Edit</button>
+							<button md-menu-item (click)="openRepairDialog(dataIdx)">Add Repair</button>
+							<button md-menu-item (click)="deleteRecheck(dataIdx)" [disabled]="!lastData || !imeData.deletable">Delete</button>
+						</md-menu>
+					</div>
+					<md-card class="info-card recheck-card" [ngClass]="{'initial-card': dataIdx == 0, 'final-card': imeNumberData.status.constantName === 'CLEARED' && lastData}">
+						<md-card-content>
+							<div class="info-card-data-row flex-container" fxLayout="row" fxLayoutAlign="start start">
+								<div class="info-card-data-key flex-item" fxFlex="96px">
+									Date/Time
+								</div>
+								<div class="info-card-data-value truncate flex-item" fxFlex>
+									{{DateTimeUtils.getDetailedDateTime(imeData.dateTime)}}
+								</div>
+							</div>
+							<div class="info-card-data-row flex-container" fxLayout="row" fxLayoutAlign="start start">
+								<div class="info-card-data-key flex-item" fxFlex="96px">
+									Inspector
+								</div>
+								<div class="info-card-data-value truncate flex-item" fxFlex>
+									{{StringUtils.formatUserName(imeData.inspector)}}
+								</div>
+							</div>
+							<div class="info-card-data-row flex-container" fxLayout="row" fxLayoutAlign="start start">
+								<div class="info-card-data-key flex-item" fxFlex="96px" style="height: 15px;">
+									CH<sub>4</sub> (ppm)
+								</div>
+								<div class="info-card-data-value truncate flex-item" fxFlex>
+									{{imeData.methaneLevel / 100}}
+								</div>
+							</div>
+							<div class="info-card-data-row flex-container" fxLayout="row" fxLayoutAlign="start start">
+								<div class="info-card-data-key flex-item" fxFlex="96px">
+									Description
+								</div>
+								<div class="info-card-data-value flex-item" fxFlex>
+									{{imeData.description}}
+								</div>
+							</div>
+						</md-card-content>
+					</md-card>
 				</div>
-				<div *ngFor="let imeData of imeNumberData.imeData" class="flex-container" fxLayout="row">
-					<div class="flex-item" fxFlex>
-						<md-card style="height: 128px; margin-left: 4px; margin-bottom:24px;">
+				<div class="flex-item" fxFlex="50" style="padding-left: 12px;">
+					<div *ngFor="let imeRepairData of imeData.imeRepairData; let repairIdx = index">
+						<div class="info-card-action-button-container">
+							<button md-icon-button [mdMenuTriggerFor]="dataMenu">
+								<md-icon>more_vert</md-icon>
+							</button>
+							<md-menu #dataMenu="mdMenu">
+								<button md-menu-item (click)="openRepairDialog(dataIdx, repairIdx)">Edit</button>
+								<button md-menu-item (click)="deleteRepair(dataIdx, repairIdx)" [disabled]="!imeRepairData.deletable">Delete</button>
+							</md-menu>
+						</div>
+						<md-card class="info-card repair-card">
 							<md-card-content>
-								<div class="flex-item" fxFlex class="hello">
-									<strong>Date/Time:</strong> {{DateTimeUtils.getDate(imeData.dateTime)}} {{DateTimeUtils.getTime(imeData.dateTime)}}
+								<div class="info-card-data-row flex-container" fxLayout="row" fxLayoutAlign="start start">
+									<div class="info-card-data-key flex-item" fxFlex="96px">
+										Date/Time
+									</div>
+									<div class="info-card-data-value truncate flex-item" fxFlex>
+										{{DateTimeUtils.getDetailedDateTime(imeRepairData.dateTime)}}
+									</div>
 								</div>
-								<div class="flex-item" fxFlex class="hello">
-									<strong>Inspector:</strong> {{StringUtils.formatUserName(imeData.inspector)}}
+								<div class="info-card-data-row flex-container" fxLayout="row" fxLayoutAlign="start start">
+									<div class="info-card-data-key flex-item" fxFlex="96px">
+										Water/Soil
+									</div>
+									<div class="info-card-data-value truncate flex-item" fxFlex>
+										{{imeRepairData.water && imeRepairData.soil ? 'Both' : (imeRepairData.water && !imeRepairData.soil ? 'Water' : (!imeRepairData.water && imeRepairData.soil ? 'Soil' : 'No'))}}
+									</div>
 								</div>
-								<div class="flex-item" fxFlex class="hello">
-									<strong>Methane Level:</strong> {{imeData.methaneLevel / 100}}
+								<div class="info-card-data-row flex-container" fxLayout="row" fxLayoutAlign="start start">
+									<div class="info-card-data-key flex-item" fxFlex="96px" style="height: 15px;">
+										Repair Crew
+									</div>
+									<div class="info-card-data-value truncate flex-item" fxFlex>
+										{{imeRepairData.crew}}
+									</div>
 								</div>
-								<div class="flex-item" fxFlex class="hello">
-									<strong>Description:</strong> {{imeData.description}}
+								<div class="info-card-data-row flex-container" fxLayout="row" fxLayoutAlign="start start">
+									<div class="info-card-data-key flex-item" fxFlex="96px">
+										Description
+									</div>
+									<div class="info-card-data-value flex-item" fxFlex>
+										{{imeRepairData.description}}
+									</div>
 								</div>
 							</md-card-content>
 						</md-card>
-
-					</div>
-					<div class="flex-item" fxFlex>
-						<md-card *ngFor="let imeRepairData of imeData.imeRepairData" style="height: 128px; margin-left: 4px; margin-bottom:24px;">
-							<md-card-content>
-								<div class="flex-item" fxFlex class="hello">
-									<strong>Date/Time:</strong> {{DateTimeUtils.getDate(imeRepairData.dateTime)}} {{DateTimeUtils.getTime(imeRepairData.dateTime)}}
-								</div>
-								<div class="flex-item" fxFlex class="hello"> 
-									<strong>Description:</strong> {{imeRepairData.description}}
-								</div>
-								<div class="flex-item" fxFlex class="hello">
-									<strong>Crew:</strong> {{imeRepairData.crew}}
-								</div>
-							</md-card-content>
-						</md-card>
-						<div style="height:128px; padding-top:44px; text-align:center;">
-							<button md-button color="accent" (click)="openNewRepairDialog(imeData)">
-								ADD REPAIR <md-icon>add</md-icon>
-							</button>
-						</div>
 					</div>
 				</div>
-				<div class="flex-container" fxLayout="row">
-					<div class="flex-item" fxFlex="50">
-						<div style="height:128px; padding-top:44px; text-align:center;">
-							<button md-button color="accent" (click)="openNewRecheckDialog()">
-								ADD RECHECK <md-icon>add</md-icon>
-							</button>
-						</div>
-					</div>
-				</div>
-			</md-card-content>
-		</md-card>
+			</div>
+		</div>
 	</div>
 </div>
 <div class="fab-bottom-container">
-	<button md-fab (click)="save()" mdTooltip="Save" mdTooltipPosition="above" class="fab-action-button">
-		<md-icon>save</md-icon>
-	</button>
+	<div class="flex-container" fxLayout="column" fxLayoutAlign="end center">
+		<button md-fab (click)="openRepairDialog()" mdTooltip="Add Repair" mdTooltipPosition="before" class="fab-button-white flex-item" fxFlex="56px">
+			<md-icon>build</md-icon>
+		</button>
+		<button md-fab (click)="openRecheckDialog()" mdTooltip="Add Recheck" mdTooltipPosition="before" class="fab-button-white flex-item" fxFlex="56px">
+			<md-icon>repeat</md-icon>
+		</button>
+		<button md-fab (click)="save()" mdTooltip="Save" mdTooltipPosition="before" class="flex-item" fxFlex="56px">
+			<md-icon>save</md-icon>
+		</button>
+	</div>
 </div>
