--- a/client/src/app/components/settings/application-settings/application-settings.component.html
+++ b/client/src/app/components/settings/application-settings/application-settings.component.html
@@ -4,46 +4,21 @@
 		<md-card>
 			<md-card-content>
 				<div class="section-header">
-					User Accounts
+					Security Token
 				</div>
 				<div class="settings-container">
 					<div class="setting-row flex-container" fxLayout="row" fxLayoutAlign="space-between stretch">
-						<div class="setting-label flex-item" fxFlex>
-							Username Min Length
+						<div class="flex-item" fxFlex>
+							<div class="setting-title">
+								Expiration Time
+							</div>
+							<div class="setting-subtitle truncate">
+								The amount of time that a generated token is valid for before expiring. Set to zero to never expire.
+							</div>
 						</div>
-						<md-input-container class="md-input-full-width flex-item" fxFlex="40px">
-							<input mdInput type="number" min="1" [(ngModel)]="applicationSettings.USERNAME_MIN_LENGTH.value">
+						<md-input-container class="md-input-full-width flex-item" fxFlex="80px">
+							<input mdInput type="number" [(ngModel)]="applicationSettings.TOKEN_EXPIRATION_TIME.value">
 						</md-input-container>
-					</div>
-					<div class="setting-row flex-container" fxLayout="row" fxLayoutAlign="space-between stretch">
-						<div class="setting-label flex-item" fxFlex>
-							Username Max Length
-						</div>
-						<md-input-container class="md-input-full-width flex-item" fxFlex="40px">
-							<input mdInput type="number" max="255" [(ngModel)]="applicationSettings.USERNAME_MAX_LENGTH.value">
-						</md-input-container>
-					</div>
-					<div class="setting-row flex-container" fxLayout="row" fxLayoutAlign="space-between stretch">
-						<div class="setting-label flex-item" fxFlex>
-							Password Min Length
-						</div>
-						<md-input-container class="md-input-full-width flex-item" fxFlex="40px">
-							<input mdInput type="number" [(ngModel)]="applicationSettings.PASSWORD_MIN_LENGTH.value">
-						</md-input-container>
-					</div>
-					<div class="setting-row flex-container" fxLayout="row" fxLayoutAlign="space-between stretch">
-						<div class="setting-label flex-item" fxFlex>
-							Password Max Length
-						</div>
-						<md-input-container class="md-input-full-width flex-item" fxFlex="40px">
-							<input mdInput type="number" [(ngModel)]="applicationSettings.PASSWORD_MAX_LENGTH.value">
-						</md-input-container>
-					</div>
-					<div class="setting-row flex-container" fxLayout="row" fxLayoutAlign="space-between stretch">
-						<div class="setting-label flex-item" fxFlex>
-							Password Requires Special Character
-						</div>
-						<md-slide-toggle [(ngModel)]="applicationSettings.PASSWORD_ENFORCE_SPECIAL_CHAR.value" class="flex-item" fxFlex="40px"></md-slide-toggle>
 					</div>
 				</div>
 			</md-card-content>
@@ -51,19 +26,116 @@
 		<md-card>
 			<md-card-content>
 				<div class="section-header">
-					Security Token
+					User Accounts
 				</div>
 				<div class="settings-container">
 					<div class="setting-row flex-container" fxLayout="row" fxLayoutAlign="space-between stretch">
-						<div class="setting-label flex-item" fxFlex>
-							Expiration Time
+						<div class="flex-item" fxFlex>
+							<div class="setting-title">
+								Min Username Length
+							</div>
+							<div class="setting-subtitle truncate">
+								Minimum required length of usernames.
+							</div>
 						</div>
 						<md-input-container class="md-input-full-width flex-item" fxFlex="40px">
 							<input mdInput type="number" min="1" [(ngModel)]="applicationSettings.USERNAME_MIN_LENGTH.value">
 						</md-input-container>
 					</div>
+					<div class="setting-row flex-container" fxLayout="row" fxLayoutAlign="space-between stretch">
+						<div class="flex-item" fxFlex>
+							<div class="setting-title">
+								Max Username Length
+							</div>
+							<div class="setting-subtitle truncate">
+								Maximum length of usernames.
+							</div>
+						</div>
+						<md-input-container class="md-input-full-width flex-item" fxFlex="40px">
+							<input mdInput type="number" max="255" [(ngModel)]="applicationSettings.USERNAME_MAX_LENGTH.value">
+						</md-input-container>
+					</div>
+					<div class="setting-row flex-container" fxLayout="row" fxLayoutAlign="space-between stretch">
+						<div class="flex-item" fxFlex>
+							<div class="setting-title">
+								Min Password Length
+							</div>
+							<div class="setting-subtitle truncate">
+								Minimum required length of user account passwords.
+							</div>
+						</div>
+						<md-input-container class="md-input-full-width flex-item" fxFlex="40px">
+							<input mdInput type="number" [(ngModel)]="applicationSettings.PASSWORD_MIN_LENGTH.value">
+						</md-input-container>
+					</div>
+					<div class="setting-row flex-container" fxLayout="row" fxLayoutAlign="space-between stretch">
+						<div class="flex-item" fxFlex>
+							<div class="setting-title">
+								Max Password Length
+							</div>
+							<div class="setting-subtitle truncate">
+								Maximum length of user account passwords.
+							</div>
+						</div>
+						<md-input-container class="md-input-full-width flex-item" fxFlex="40px">
+							<input mdInput type="number" [(ngModel)]="applicationSettings.PASSWORD_MAX_LENGTH.value">
+						</md-input-container>
+					</div>
+					<div class="setting-row flex-container" fxLayout="row" fxLayoutAlign="space-between stretch">
+						<div class="flex-item" fxFlex>
+							<div class="setting-title">
+								Password Special Character Required
+							</div>
+							<div class="setting-subtitle truncate">
+								Whether user account passwords require at least one non-alphanumeric character.
+							</div>
+						</div>
+						<md-slide-toggle [(ngModel)]="applicationSettings.PASSWORD_ENFORCE_SPECIAL_CHAR.value" class="flex-item" fxFlex="40px"></md-slide-toggle>
+					</div>
 				</div>
 			</md-card-content>
 		</md-card>
+		<md-card *ngIf="isSuperAdmin">
+			<md-card-content>
+				<div class="section-header">
+					Super Admin
+				</div>
+				<div class="settings-container">
+					<div class="setting-row flex-container" fxLayout="row" fxLayoutAlign="space-between stretch">
+						<div class="flex-item" fxFlex>
+							<div class="setting-title">
+								Super Admin Password
+							</div>
+							<div class="setting-subtitle truncate">
+								Set the password for the super admin account. This will log you out.
+							</div>
+						</div>
+						<button md-icon-button color="accent" (click)="openSuperAdminPasswordDialog()" style="margin-top: 12px">
+							<md-icon>border_color</md-icon>
+						</button>
+					</div>
+				</div>
+			</md-card-content>
+		</md-card>
+	</div>
+</div>
+<div class="fab-bottom-container">
+	<div class="flex-container" fxLayout="column" fxLayoutAlign="end center">
+		<button md-fab
+			(click)="resetToDefault()"
+			mdTooltip="Load Defaults"
+			mdTooltipPosition="before"
+			class="fab-button-white flex-item"
+			fxFlex="56px">
+			<md-icon>replay</md-icon>
+		</button>
+		<button md-fab
+			(click)="save()"
+			mdTooltip="Save"
+			mdTooltipPosition="before"
+			class="flex-item"
+			fxFlex="56px">
+			<md-icon>save</md-icon>
+		</button>
 	</div>
 </div>
