--- a/client/src/app/components/directives/card-selector-menu/card-selector-menu.component.scss
+++ b/client/src/app/components/directives/card-selector-menu/card-selector-menu.component.scss
@@ -1,3 +1,5 @@
+@import "../../../app-theme";
+
 .selector-cards-container {
 	width: 100%;
 	min-width: 600px;
@@ -32,6 +34,18 @@
 	.selector-card-img {
 		filter: grayscale(100%) contrast(69%) brightness(200%) ;
 	}
+}
+
+.selector-card-primary-edge {
+	border-left: 4px solid mat-color($app-primary) !important;
+}
+
+.selector-card-accent-edge {
+	border-left: 4px solid mat-color($app-accent) !important;
+}
+
+.selector-card-disabled-edge {
+	border-left: 4px solid #BDBDBD !important;
 }
 
 .selector-card-img {
