--- a/client/src/app/components/mobile/mobile-sync/mobile-sync.component.scss
+++ b/client/src/app/components/mobile/mobile-sync/mobile-sync.component.scss
@@ -12,6 +12,7 @@
 	user-select: none;
 	cursor: pointer;
 	outline: none;
+	border-left: 4px solid #FFA726;
 	transition: all 0.1s ease-in-out;
 	box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12); // mat-elevation-z2
 }
