minor ime page changes

--- a/client/src/app/components/exceedance/ime-number/ime-number.component.html
+++ b/client/src/app/components/exceedance/ime-number/ime-number.component.html
@@ -172,7 +172,7 @@
 			[disabled]="!imeNumberData || isCleared"
 			class="fab-button-white flex-item"
 			fxFlex="56px">
-			<md-icon>repeat</md-icon>
+			<md-icon>find_replace</md-icon>
 		</button>
 		<button md-fab
 			(click)="save()"
