simplified some scss

--- a/client/src/app/components/directives/card-selector-menu/card-selector-menu.component.html
+++ b/client/src/app/components/directives/card-selector-menu/card-selector-menu.component.html
@@ -21,8 +21,8 @@
                         <div class="selector-card-subtitle">{{card.subtitle}}</div>
                     </div>
                     <div class="selector-card-action flex-item" fxFlex="48px">
-                        <button md-icon-button [disabled]="card.disabled">
-                            <md-icon class="primary-color">navigate_next</md-icon>
+                        <button md-icon-button color="primary" [disabled]="card.disabled">
+                            <md-icon>navigate_next</md-icon>
                         </button>
                     </div>
                 </div>
