--- a/client/src/app/components/mobile/mobile-sync/mobile-sync.component.html
+++ b/client/src/app/components/mobile/mobile-sync/mobile-sync.component.html
@@ -10,8 +10,8 @@
                         <div class="selector-card-subtitle">Upload Data File from Android Application</div>
                     </div>
                     <div class="selector-card-action flex-item" fxFlex="64px">
-                        <button md-icon-button>
-                            <md-icon class="primary-color">
+                        <button md-icon-button color="primary">
+                            <md-icon>
 								{{uploadDropdownOpen ? 'expand_less' : 'expand_more'}}
 							</md-icon>
                         </button>
@@ -32,8 +32,8 @@
                         <div class="selector-card-subtitle">Download Data File to Android Application</div>
                     </div>
                     <div class="selector-card-action flex-item" fxFlex="64px">
-                        <button md-icon-button>
-                            <md-icon class="primary-color">file_download</md-icon>
+                        <button md-icon-button color="primary">
+                            <md-icon>file_download</md-icon>
                         </button>
                     </div>
                 </div>
