--- a/client/src/app/components/mobile/mobile-sync/mobile-sync.component.scss
+++ b/client/src/app/components/mobile/mobile-sync/mobile-sync.component.scss
@@ -1,25 +1,9 @@
-.selector-cards-container {
-	width: 100%;
-	min-width: 600px;
-}
+@import "../../directives/card-selector-menu/card-selector-menu.component";
 
 .selector-card {
 	position: relative;
 	z-index: 2;
-	background: #FFF;
-	border-radius: 2px;
-	margin: 8px 0;
-	user-select: none;
-	cursor: pointer;
-	outline: none;
 	border-left: 4px solid #FFA726;
-	transition: all 0.1s ease-in-out;
-	box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12); // mat-elevation-z2
-}
-
-.selector-card:hover {
-	transform: translate(-1px, -1px);
-	box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2), 0px 8px 10px 1px rgba(0, 0, 0, 0.14), 0px 3px 14px 2px rgba(0, 0, 0, 0.12); // mat-elevation-z8
 }
 
 .selector-card-expansion-card {
@@ -38,32 +22,6 @@
 	pointer-events: all;
 	top: -8px;
 	height: 108px
-}
-
-.selector-card-title-container {
-	padding: 24px;
-}
-
-.selector-card-title {
-	font-size: 24px;
-    font-weight: 400;
-    color: rgba(0, 0, 0, 0.87);
-    line-height: 24px;
-}
-
-.selector-card-subtitle {
-	font-size: 14px;
-    font-weight: 400;
-    color: rgba(0, 0, 0, 0.54);
-    padding-top: 16px;
-    line-height: 14px;
-}
-
-.selector-card-action {
-	padding: 34px 0;
-	button {
-		margin-left: 8px;
-	}
 }
 
 .upload-component-hidden {
